--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="text-box">
         <h1>World's Biggest University</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> cumque mollitia dolorem eligendi eveniet eum expedita ullam assumenda ab quam.</p>
-        <a href="" class="hero-btn">Visit Us To Know More</a>
+        <a href="" class="hero-btn">Visit To Know More</a>
     </div>
     </section>
 
